--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
   "name": "Discovery BBC Radio",
   "version": "0.1.0",
   "manifest_version": 2,
+  "icons": {
+    "128": "img/icon.png"
+  },
   "content_scripts": [
     {
       "matches" : ["http://www.bbc.co.uk/*", "http://www.bbc.com/*"],
